--- a/public/index.css
+++ b/public/index.css
@@ -24,7 +24,7 @@
 }
 
 .nav-link-active {
-  background: #320059;
+  background: #260043;
 }
 
 .pet-type-label {
@@ -62,6 +62,12 @@
   margin: 0;
 }
 
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .page h3 {
   text-align: center;
   font-size: 30px;
@@ -71,7 +77,7 @@
 }
 
 .page img {
-  margin: 0 auto;
+  margin: 2% auto;
   display: block;
 }
 
